tests/duarouter/flows/errors/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalSpeed definition for flow '0';
 must be one of ("current", or a float>=0)
Quitting (on error).
